Updates for the grid search and GLOVE in the dispersion software comparison table in the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -90,7 +90,7 @@ HD exchange                                     & \no  & \no  & \no  & \no  & \n
 \vspace{-5pt} \\
 \textbf{Optimisation algorithms} \\
 \cmidrule(lr){1-1}
-Grid search                                     & \yes & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
+Grid search                                     & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
 Grid search (via scripting)                     & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
 Nelder-Mead simplex                             & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 Levenberg-Maquardt                              & \yes & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  \\
