--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -74,9 +74,6 @@ NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \
 \vspace{-5pt} \\
 \textbf{General features} \\
 \cmidrule(lr){1-1}
-Graphical user interface (GUI)                  & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
-Web user interface (Web UI)                     & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  \\
-Scripting user interface (Script UI)            & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \yes \\
 Parallelisation via MPI for running on clusters & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 Off-resonance effects (CPMG-type data)          & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
 Off-resonance effects ($\Ronerho$-type data)    & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
@@ -85,18 +82,42 @@ Van't Hoff analysis                             & \no  & \no  & \no  & \yes & \n
 ZZ exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 
+\vspace{-5pt} \\
+\textbf{User interface} \\
+\cmidrule(lr){1-1}
+Graphical user interface (GUI)                  & \no  & \no  & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
+Web user interface (Web UI)                     & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  \\
+Scripting user interface (Script UI)            & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \yes \\
+Shell interface                                 & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  \\
+
 \pagebreak
 
 \vspace{-5pt} \\
 \textbf{Optimisation algorithms} \\
 \cmidrule(lr){1-1}
-Grid search                                     & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
+Grid search                                     & \yes & \no  & \no  & \yes & \yes & \yes & \yes & \no  & \yes \\
 Grid search (via scripting)                     & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
 Nelder-Mead simplex                             & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 Levenberg-Maquardt                              & \yes & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  \\
 Numeric gradient approximation                  & \yes & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  \\
 Logarithmic-barrier constraint algorithm        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
-Monte Carlo simulations for error analysis      & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \no  & \yes \\
+
+\vspace{-5pt} \\
+\textbf{Error propagation} \\
+\cmidrule(lr){1-1}
+Covariance matrix (lowest quality)              & \yes & \yes & \yes & \no  & \no  & \no  & \yes & \no  & \no  \\
+Jackknife simulations (for missing errors)      & \yes & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
+Bootstrapping simulations (false errors)        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+Currently unknown (please update)               & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  \\
+Monte Carlo simulations (gold standard)         & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \yes & \yes \\
+
+\vspace{-5pt} \\
+\textbf{Inbuilt statistical comparisons} \\
+\cmidrule(lr){1-1}
+Akaike's Information Criterion (AIC)            & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \yes \\
+Small sample size AIC (AICc)                    & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \yes \\
+Bayesian Information Criterion (BIC)            & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+F-testing (ANOVA statistics)                    & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  \\
 
 \vspace{-5pt} \\
 \textbf{Programming languages} \\
