Expanded the abbreviations of the user manual for many relaxation dispersion terms.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -277,11 +277,14 @@
 \item[AICc:]  small sample size corrected AIC (model selection method)
 \item[API:]  application programming interface
 \item[ANOVA:]  analysis of variance (field of statistics)
+\item[BC:]  back calculation
 \item[BIC:]  Bayesian Information Criteria (model selection method)
 \item[BFGS:]  Broyden-Fletcher-Goldfarb-Shanno (optimisation method)
 \item[$C(\tau)$:]  correlation function
 \item[$\chi^2$:]  chi-squared function
 \item[CG:]  conjugate gradient (optimisation)
+\item[CPMG:]  the Carr-Purcell-Meiboom-Gill pulse sequence
+\item[CR72:]  the \citet{CarverRichards72} relaxation dispersion model
 \item[CSA:]  chemical shift anisotropy
 \item[CV:]  cross validation
 \item[CVS:]  Concurrent Versions System (open source version control system)
@@ -295,6 +298,8 @@
 \item[$\Diff_x$:]  the eigenvalue of the Brownian rotational diffusion tensor in which the corresponding eigenvector defines the x-axis of the tensor
 \item[$\Diff_y$:]  the eigenvalue of the Brownian rotational diffusion tensor in which the corresponding eigenvector defines the y-axis of the tensor
 \item[$\Diff_z$:]  the eigenvalue of the Brownian rotational diffusion tensor in which the corresponding eigenvector defines the z-axis of the tensor
+\item[DPL94:]  the \citet{Davis94} relaxation dispersion model
+\item[DQ:]  double quantum
 \item[$\epsilon_i$:]  elimination value
 \item[FSF:]  Free Software Foundation
 \item[GNU:]  GNU's Not Unix!
@@ -302,14 +307,19 @@
 \item[GPL:]  GNU general public licence
 \item[GUI:]  graphical user interface
 \item[ID string:]  identification string
+\item[IT99:]  the \citet{IshimaTorchia99} relaxation dispersion model
 \item[$J(\omega)$:]  spectral density function
+\item[LM63:]  the \citet{LuzMeiboom63} relaxation dispersion model
+\item[M61:]  the \citet{Meiboom61} relaxation dispersion model
 \item[MC:]  Monte Carlo (simulations)
 \item[MD:]  molecular dynamics (simulations)
+\item[MMQ:]  proton-heteronuclear SQ, ZQ, DQ, and MQ data (multi-multiple quantum)
 \item[MPI:]  message passing interface
 \item[MQ:]  multiple quantum
 \item[NMR:]  if you do not know this one, do not read further
 \item[NNTP:]  network news transfer protocol
 \item[NOE:]  nuclear Overhauser effect
+\item[NS:]  numeric solution
 \item[ORD:]  optical rotatory dispersion
 \item[OS:]  operating system
 \item[PCS:]  pseudocontact shift
@@ -329,8 +339,11 @@
 \item[SVN:]  Apache Subversion (open source version control system)
 \item[$\tau_e$, $\tau_f$, and $\tau_s$:]  model-free effective internal correlation times
 \item[$\tau_m$:]  global rotational correlation time
+\item[TP02:]  the \citet{TrottPalmer02} relaxation dispersion model
+\item[TSMFK01:]  the \citet{Tollinger01} relaxation dispersion model
 \item[UI:]  user interface
 \item[XML:]  extensible markup language
+\item[ZQ:]  zero quantum
 
 \end{description}
 
