Update for NESSY in the dispersion software comparison table of the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -82,7 +82,7 @@ Van't Hoff analysis                             & \no  & \no  & \no  & \yes & \y
 Arrhenius analysis                              & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
 ZZ exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-Dispersion data back calculation (BC)           & \no  & \yes & \no  & \no  & \yes & \no  & \no  & \no  & \yes \\
+Dispersion data back calculation (BC)           & \no  & \yes & \no  & \yes & \yes & \no  & \no  & \no  & \yes \\
 
 \pagebreak
 
