Added more R1rho model references to the bibliography file for the manual.
This includes the Trott and Palmer 2004 N-site and the Miloushev and Palmer 2005 2-site models.  The
Trott and Palmer 2002 R1rho model reference has been expanded to include all details.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -4895,6 +4895,70 @@
   year           = 2000
 }
 
+@Article{MiloushevPalmer05,
+  Author         = {Miloushev, V. Z. and Palmer, 3rd, A. G.},
+  Title          = {R(1rho) relaxation for two-site chemical exchange:
+                   general approximations and some exact solutions.},
+  Journal        = jmr,
+  Volume         = {177},
+  Number         = {2},
+  Pages          = {221-7},
+  abstract       = {Analytic expressions for the nuclear magnetic spin
+                   relaxation rate constant for magnetization spin-locked
+                   in the rotating reference frame under an applied
+                   radiofrequency field, R(1rho), are obtained for
+                   two-site chemical exchange. The theoretical approach is
+                   motivated by Laguerre's method and obtains R(1rho) as
+                   the root of a (p1,q1) Pade approximant. The general
+                   formula for R(1rho) obtained by this approach is
+                   substantially simpler than existing expressions and is
+                   equally or slightly more accurate, in most cases. In
+                   addition, particular solutions for the R(1rho) rate
+                   constant are presented for two special cases: equal
+                   populations of the two exchanging sites, or placement
+                   of the radiofrequency carrier at the average resonance
+                   frequency of the two sites. The solutions are exact
+                   when the R1 and R2 relaxation rate constants are
+                   identical, and nearly exact under realistic
+                   experimental conditions.},
+  authoraddress  = {Department of Biochemistry and Molecular Biophysics,
+                   Columbia University, 630 West 168th Street, New York,
+                   NY 10032, USA.},
+  keywords       = {*Models, Chemical ; Nuclear Magnetic Resonance,
+                   Biomolecular/*methods ; Proteins/chemistry},
+  language       = {eng},
+  medline-aid    = {S1090-7807(05)00249-1 [pii] ;
+                   10.1016/j.jmr.2005.07.023 [doi]},
+  medline-crdt   = {2005/09/07 09:00},
+  medline-da     = {20051128},
+  medline-dcom   = {20060228},
+  medline-dep    = {20050906},
+  medline-edat   = {2005/09/07 09:00},
+  medline-fau    = {Miloushev, Vesselin Z ; Palmer, Arthur G 3rd},
+  medline-gr     = {GM07367/GM/NIGMS NIH HHS/United States ;
+                   GM59273/GM/NIGMS NIH HHS/United States},
+  medline-is     = {1090-7807 (Print) ; 1090-7807 (Linking)},
+  medline-jid    = {9707935},
+  medline-jt     = {Journal of magnetic resonance (San Diego, Calif. :
+                   1997)},
+  medline-lr     = {20071114},
+  medline-mhda   = {2006/03/01 09:00},
+  medline-own    = {NLM},
+  medline-phst   = {2005/04/29 [received] ; 2005/06/21 [revised] ;
+                   2005/07/28 [accepted] ; 2005/09/06 [aheadofprint]},
+  medline-pl     = {United States},
+  medline-pmid   = {16143548},
+  medline-pst    = {ppublish},
+  medline-pt     = {Journal Article ; Research Support, N.I.H., Extramural},
+  medline-rn     = {0 (Proteins)},
+  medline-sb     = {IM},
+  medline-so     = {J Magn Reson. 2005 Dec;177(2):221-7. Epub 2005 Sep 6.},
+  medline-stat   = {MEDLINE},
+  url            = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?cmd=prlinks&dbfrom=pubmed&retmode=ref&id=16143548},
+  doi            = {10.1016/j.jmr.2005.07.023},
+  year           = 2005
+}
+
 @Article{MoreThuente94,
   Author         = {Mor{\'e}, J. J. and Thuente, D. J.},
   Title          = {Line search algorithms with guaranteed sufficient
@@ -6754,15 +6818,117 @@
 }
 
 @Article{TrottPalmer02,
-	pmid = {11820837},
-	author = {Trott, O. and Palmer, A. G.},
-	title = {R1rho relaxation outside of the fast-exchange limit.},
-	journal = jmr,
-	volume = {154},
-	number = {1},
-	pages = {157-160},
-	year = {2002},
-	doi = {10.1006/jmre.2001.2466},
+  Author         = {Trott, O. and Palmer, 3rd, A. G.},
+  Title          = {R1rho relaxation outside of the fast-exchange limit.},
+  Journal        = jmr,
+  Volume         = {154},
+  Number         = {1},
+  Pages          = {157-60},
+  abstract       = {Chemical-exchange effects in NMR spectroscopy enable
+                   kinetic processes to be characterized at equilibrium in
+                   solution. Beginning with the Bloch-McConnell equations,
+                   new expressions are derived for the spin relaxation
+                   rate constant in the rotating frame, R1rho, for
+                   chemical exchange between two sites that have distinct
+                   magnetic environments and Larmor frequencies. The
+                   results are accurate provided that the spin relaxation
+                   decay is dominated by a single exponential damping
+                   constant and are applicable to a wider range of
+                   conditions than existing theoretical descriptions. The
+                   new expressions for R1rho will be particularly useful
+                   in analyzing experimental data when exchange is not
+                   fast and site populations are unequal.},
+  authoraddress  = {Department of Biochemistry and Molecular Biophysics,
+                   Columbia University, 630 West 168th Street, New York,
+                   New York 10032, USA.},
+  keywords       = {*Magnetic Resonance Spectroscopy ; Mathematics ;
+                   Models, Theoretical ; Solutions},
+  language       = {eng},
+  medline-aid    = {10.1006/jmre.2001.2466 [doi] ; S1090780701924668 [pii]},
+  medline-crdt   = {2002/02/01 10:00},
+  medline-da     = {20020131},
+  medline-dcom   = {20020503},
+  medline-edat   = {2002/02/01 10:00},
+  medline-fau    = {Trott, Oleg ; Palmer, Arthur G 3rd},
+  medline-gr     = {GM59273/GM/NIGMS NIH HHS/United States},
+  medline-is     = {1090-7807 (Print) ; 1090-7807 (Linking)},
+  medline-jid    = {9707935},
+  medline-jt     = {Journal of magnetic resonance (San Diego, Calif. :
+                   1997)},
+  medline-lr     = {20071114},
+  medline-mhda   = {2002/05/04 10:01},
+  medline-own    = {NLM},
+  medline-pl     = {United States},
+  medline-pmid   = {11820837},
+  medline-pst    = {ppublish},
+  medline-pt     = {Journal Article ; Research Support, U.S. Gov't, P.H.S.},
+  medline-rn     = {0 (Solutions)},
+  medline-sb     = {IM},
+  medline-so     = {J Magn Reson. 2002 Jan;154(1):157-60.},
+  medline-stat   = {MEDLINE},
+  url            = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?cmd=prlinks&dbfrom=pubmed&retmode=ref&id=11820837},
+  doi            = {10.1006/jmre.2001.2466},
+  year           = 2002
+}
+
+@Article{TrottPalmer04,
+  Author         = {Trott, O. and Palmer, 3rd, A. G.},
+  Title          = {Theoretical study of {R}(1rho) rotating-frame and {R}2
+                   free-precession relaxation in the presence of n-site
+                   chemical exchange.},
+  Journal        = jmr,
+  Volume         = {170},
+  Number         = {1},
+  Pages          = {104-12},
+  abstract       = {The n-site Bloch-McConnell equations describe the
+                   evolution of nuclear spin magnetization in the
+                   laboratory or rotating frames of reference for
+                   molecules subject to chemical or conformational
+                   interconversions between n species with distinct NMR
+                   chemical shifts. Perturbation theory is used to
+                   approximate the largest eigenvalue of the
+                   Bloch-McConnell equations and obtain analytical
+                   expressions for the rotating-frame relaxation rate
+                   constant and for the laboratory frame resonance
+                   frequency and transverse relaxation rate constant. The
+                   perturbation treatment is valid whenever the population
+                   of one site is dominant. The new results are generally
+                   applicable to investigations of kinetic processes by
+                   NMR spectroscopy.},
+  authoraddress  = {Department of Biochemistry and Molecular Biophysics,
+                   Columbia University, 630 West 168th Street, New York,
+                   NY 10032, USA.},
+  keywords       = {*Models, Chemical ; Nuclear Magnetic Resonance,
+                   Biomolecular/*methods ; Proteins/chemistry},
+  language       = {eng},
+  medline-aid    = {10.1016/j.jmr.2004.06.005 [doi] ; S1090780704001752
+                   [pii]},
+  medline-crdt   = {2004/08/25 05:00},
+  medline-da     = {20040824},
+  medline-dcom   = {20041021},
+  medline-edat   = {2004/08/25 05:00},
+  medline-fau    = {Trott, Oleg ; Palmer, Arthur G 3rd},
+  medline-gr     = {GM59273/GM/NIGMS NIH HHS/United States ; T32
+                   DK07328/DK/NIDDK NIH HHS/United States},
+  medline-is     = {1090-7807 (Print) ; 1090-7807 (Linking)},
+  medline-jid    = {9707935},
+  medline-jt     = {Journal of magnetic resonance (San Diego, Calif. :
+                   1997)},
+  medline-lr     = {20071114},
+  medline-mhda   = {2004/10/22 09:00},
+  medline-own    = {NLM},
+  medline-phst   = {2004/03/13 [received] ; 2004/06/10 [revised]},
+  medline-pl     = {United States},
+  medline-pmid   = {15324763},
+  medline-pst    = {ppublish},
+  medline-pt     = {Journal Article ; Research Support, U.S. Gov't, P.H.S.},
+  medline-rn     = {0 (Proteins)},
+  medline-sb     = {IM},
+  medline-so     = {J Magn Reson. 2004 Sep;170(1):104-12.},
+  medline-stat   = {MEDLINE},
+  url            = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?cmd=prlinks&dbfrom=pubmed&retmode=ref&id=15324763},
+  doi            = {10.1016/j.jmr.2004.06.005},
+  year           = 2004
 }
 
 @Article{Tsan00,
