Added the TP04 and MP05 R1rho dispersion models to the manual.
These are not implemented in relax, or any of the software in the software comparison section, but
are included for completeness.  This was pointed out by Art Palmer.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -137,6 +137,9 @@
 \newcommand{\dwAB}{\Delta\omega_\textrm{AB}}
 \newcommand{\dwAC}{\Delta\omega_\textrm{AC}}
 \newcommand{\dwH}{\Delta\omega_{\scriptscriptstyle\mathrm{H}}}
+\newcommand{\konetwo}{\textrm{k}_\textrm{12}}
+\newcommand{\konethree}{\textrm{k}_\textrm{13}}
+\newcommand{\koneN}{\textrm{k}_\textrm{1N}}
 \newcommand{\kex}{\textrm{k}_\textrm{ex}}
 \newcommand{\kexB}{\textrm{k}_\textrm{ex,B}}
 \newcommand{\kexC}{\textrm{k}_\textrm{ex,C}}
@@ -155,9 +158,13 @@
 \newcommand{\omegae}{\omega_\textrm{e}}
 \newcommand{\omegaone}{\omega_1}
 \newcommand{\omegarf}{\omega_\textrm{rf}}
+\newcommand{\pone}{p_\textrm{1}}
+\newcommand{\ptwo}{p_\textrm{2}}
+\newcommand{\pthree}{p_\textrm{3}}
 \newcommand{\pA}{p_\textrm{A}}
 \newcommand{\pB}{p_\textrm{B}}
 \newcommand{\pC}{p_\textrm{C}}
+\newcommand{\pN}{p_\textrm{N}}
 \newcommand{\Phiex}{\Phi_\textrm{ex}}
 \newcommand{\PhiexB}{\Phi_\textrm{ex,B}}
 \newcommand{\PhiexC}{\Phi_\textrm{ex,C}}
