--- a/docs/latex/dispersion_models.tex
+++ b/docs/latex/dispersion_models.tex
@@ -51,6 +51,8 @@ M61             & Analytic & 2     & $\{\Ronerhoprime, \dots, \Phiex, \kex\}$   
 DPL94           & Analytic & 2     & $\{\Ronerhoprime, \dots, \Phiex, \kex\}$          & Fast exchange                     & \citet{Davis94} \\
 M61 skew        & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & $\pA \gg \pB$, on-resonance       & \citet{Meiboom61} \\
 TP02            & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & Not fast exchange                 & \citet{TrottPalmer02} \\
+TP04            & Analytic & N     & $\{\Ronerhoprime, \dots, \pone, \dots, \pN, \aveomega, \konetwo, \dots\, \koneN\}$    & One site dominant                 & \citet{TrottPalmer04} \\
+MP05            & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & $\pA > \pB$                       & \citet{MiloushevPalmer05} \\
 NS R1rho 2-site & Numeric  & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & $\pA > \pB$                       & - \\
 
 \\[-5pt]
