Added the Korzhnev et al., 2005 reference to the bibliography file for the manual.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -3865,6 +3865,76 @@
   year           = 2004
 }
 
+@Article{Korzhnev05,
+  Author         = {Korzhnev, D. M. and Neudecker, P. and Mittermaier, A.
+                   and Orekhov, V. Y. and Kay, L. E.},
+  Title          = {Multiple-site exchange in proteins studied with a
+                   suite of six {NMR} relaxation dispersion experiments:
+                   an application to the folding of a {F}yn {SH}3 domain
+                   mutant.},
+  Journal        = jacs,
+  Volume         = {127},
+  Number         = {44},
+  Pages          = {15602-15611},
+  abstract       = {The three-site exchange folding reaction of an
+                   (15)N-labeled, highly deuterated Gly48Met mutant of the
+                   Fyn SH3 domain has been characterized at 25 degrees C
+                   using a suite of six CPMG-type relaxation dispersion
+                   experiments that measure exchange contributions to
+                   backbone (1)H and (15)N transverse relaxation rates in
+                   proteins. It is shown that this suite of experiments
+                   allows the extraction of all the parameters of this
+                   multisite exchange process in a robust manner,
+                   including chemical shift differences between exchanging
+                   states, from a data set recorded at only a single
+                   temperature. The populations of the exchanging folded,
+                   intermediate, and unfolded states that are fit are 94,
+                   0.7, and 5\%, respectively. Despite the small fraction
+                   of the intermediate, structural information is obtained
+                   for this state that is consistent with the picture of
+                   SH3 domain folding that has emerged from other studies.
+                   Taken together, the six dispersion experiments
+                   facilitate the complete reconstruction of (1)H-(15)N
+                   correlation spectra for the unfolded and intermediate
+                   states that are "invisible" in even the most sensitive
+                   of NMR experiments.},
+  authoraddress  = {Departments of Medical Genetics, Biochemistry, and
+                   Chemistry, The University of Toronto, Toronto, Ontario
+                   M5S 1A8, Canada.},
+  keywords       = {Deuterium Exchange Measurement ; Magnetic Resonance
+                   Spectroscopy/*methods ; Mutation ; Nitrogen Isotopes ;
+                   *Protein Folding ; Proteins/*chemistry ; Proto-Oncogene
+                   Proteins c-fyn/*chemistry/genetics ; src Homology
+                   Domains},
+  language       = {eng},
+  medline-aid    = {10.1021/ja054550e [doi]},
+  medline-crdt   = {2005/11/03 09:00},
+  medline-da     = {20051102},
+  medline-dcom   = {20060208},
+  medline-edat   = {2005/11/03 09:00},
+  medline-fau    = {Korzhnev, Dmitry M ; Neudecker, Philipp ; Mittermaier,
+                   Anthony ; Orekhov, Vladislav Yu ; Kay, Lewis E},
+  medline-is     = {0002-7863 (Print) ; 0002-7863 (Linking)},
+  medline-jid    = {7503056},
+  medline-jt     = {Journal of the American Chemical Society},
+  medline-lr     = {20120605},
+  medline-mhda   = {2006/02/09 09:00},
+  medline-own    = {NLM},
+  medline-pl     = {United States},
+  medline-pmid   = {16262426},
+  medline-pst    = {ppublish},
+  medline-pt     = {Journal Article ; Research Support, Non-U.S. Gov't},
+  medline-rn     = {0 (Nitrogen Isotopes) ; 0 (Proteins) ; EC 2.7.10.2
+                   (FYN protein, human) ; EC 2.7.10.2 (Proto-Oncogene
+                   Proteins c-fyn)},
+  medline-sb     = {IM},
+  medline-so     = {J Am Chem Soc. 2005 Nov 9;127(44):15602-11.},
+  medline-stat   = {MEDLINE},
+  url            = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?cmd=prlinks&dbfrom=pubmed&retmode=ref&id=16262426},
+  doi            = {10.1021/ja054550e},
+  year           = 2005
+}
+
 @Article{KullbackLeibler51,
   Author         = {Kullback, S. and Leibler, R. A.},
   Title          = {On information and sufficiency},
