Expanded the numeric dispersion models to include the linear and branched 3-site models in the manual.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -276,16 +276,16 @@ As stated, ``if the different values of ji are well-separated (by a factor of 3-
 In this situation, the following relationships hold
 \begin{subequations}
 \begin{align}
-    &\kB \approx \kexB = \kAB + \kBA , \\
-    &\kC \approx \kexC = \kAC + \kCA ,
+    &\kB \approx \kexAB = \kAB + \kBA , \\
+    &\kC \approx \kexAC = \kAC + \kCA ,
 \end{align}
 \end{subequations}
 
 and
 \begin{subequations}
 \begin{align}
-    &\PhiexB = \overline{\Phiex} \frac{\kexB^2 \left( \overline{\kex} - \kexC \right)}{\kex^2 \left( \kex - \kexC \right)} , \label{eq: disp phiexB} \\
-    &\PhiexC = \overline{\Phiex} \frac{\kexC^2 \left( \overline{\kex} - \kexB \right)}{\kex^2 \left( \kexC - \kexB \right)} , \label{eq: disp phiexC}
+    &\PhiexB = \overline{\Phiex} \frac{(\kexAB)^2 \left( \overline{\kex} - \kexAC \right)}{\kex^2 \left( \kex - \kexAC \right)} , \label{eq: disp phiexB} \\
+    &\PhiexC = \overline{\Phiex} \frac{(\kexAC)^2 \left( \overline{\kex} - \kexAB \right)}{\kex^2 \left( \kexAC - \kexAB \right)} , \label{eq: disp phiexC}
 \end{align}
 \end{subequations}
 
