--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -14,6 +14,7 @@
 \usepackage{longtable}
 \usepackage{tabularx}
 \usepackage{rotating}
+\usepackage{lscape}
 
 % Nth.
 \usepackage[super]{nth}
@@ -136,13 +137,18 @@
 \newcommand{\dw}{\Delta\omega}
 \newcommand{\dwAB}{\Delta\omega_\textrm{AB}}
 \newcommand{\dwAC}{\Delta\omega_\textrm{AC}}
-\newcommand{\dwH}{\Delta\omega_{\scriptscriptstyle\mathrm{H}}}
+\newcommand{\dwBC}{\Delta\omega_\textrm{BC}}
+\newcommand{\dwH}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}}
+\newcommand{\dwHAB}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{AB}}
+\newcommand{\dwHAC}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{AC}}
+\newcommand{\dwHBC}{\Delta\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{BC}}
 \newcommand{\konetwo}{\textrm{k}_\textrm{12}}
 \newcommand{\konethree}{\textrm{k}_\textrm{13}}
 \newcommand{\koneN}{\textrm{k}_\textrm{1N}}
 \newcommand{\kex}{\textrm{k}_\textrm{ex}}
-\newcommand{\kexB}{\textrm{k}_\textrm{ex,B}}
-\newcommand{\kexC}{\textrm{k}_\textrm{ex,C}}
+\newcommand{\kexAB}{\textrm{k}_\textrm{ex}^\textrm{AB}}
+\newcommand{\kexAC}{\textrm{k}_\textrm{ex}^\textrm{AC}}
+\newcommand{\kexBC}{\textrm{k}_\textrm{ex}^\textrm{BC}}
 \newcommand{\kA}{\textrm{k}_\textrm{A}}
 \newcommand{\kB}{\textrm{k}_\textrm{B}}
 \newcommand{\kC}{\textrm{k}_\textrm{C}}
