--- a/docs/latex/dispersion_models.tex
+++ b/docs/latex/dispersion_models.tex
@@ -1,20 +1,26 @@
-\begin{sidewaystable}
+\begin{landscape}
 \begin{center}
 \begin{small}
+
+% The longtable environment.
+\begin{longtable}{llllll}
 
 % Caption.
 \caption[The dispersion models.]{The dispersion models supported by relax.}
 
-% The tabular environment.
-\begin{tabular}{lllcll}
-
-\\[-5pt]
+% Header.
+\\
 \toprule
-
-% Headings.
-Model code               & Solution & Sites & Parameters                                          & Restriction                       & Reference \\
-
+Model name               & Solution & Sites & Parameters                                          & Restrictions                      & Reference \\
 \midrule
+\endhead
+
+% Footer.
+\bottomrule
+\endfoot
+
+% Label.
+\label{table: dispersion models}
 
 \\[-5pt]
 % Experiment independent models.
@@ -31,7 +37,8 @@ CPMG-type \\
 \cline{1-1}
 \\[-5pt]
 LM63                     & Analytic & 2     & $\{\Rtwozero, \dots, \Phiex, \kex\}$                & Fast exchange                     & \citet{LuzMeiboom63} \\
-LM63 3-site              & Analytic & 3     & $\{\Rtwozero, \dots, \PhiexB, \kB, \PhiexC, \kC\}$  & Fast exchange, $\pA > \pB$ and $\pA > \pC$  & \citet{LuzMeiboom63} \\
+LM63 3-site              & Analytic & 3     & $\{\Rtwozero, \dots, \PhiexB, \kB, \PhiexC, \kC\}$  & Fast exchange, $\pA > \pB$ and    & \citet{LuzMeiboom63} \\
+                         &          &       &                                                     & $\pA > \pC$ \\
 CR72                     & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \kex\}$              & $\pA > \pB$                       & \citet{CarverRichards72} \\
 CR72 full                & Analytic & 2     & $\{\RtwozeroA, \RtwozeroB, \dots, \pA, \dw, \kex\}$ & $\pA > \pB$                       & \citet{CarverRichards72} \\
 IT99                     & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \kex\}$              & $\pA \gg \pB$                     & \citet{IshimaTorchia99} \\
@@ -43,38 +50,42 @@ NS CPMG 2-site star      & Numeric  & 2     & $\{\Rtwozero, \dots, \pA, \dw, \ke
 NS CPMG 2-site star full & Numeric  & 2     & $\{\RtwozeroA, \RtwozeroB, \dots, \pA, \dw, \kex\}$ & $\pA > \pB$                       & - \\
 
 \\[-5pt]
-% R1rho-type models.
-$\Ronerho$-type \\
-\cline{1-1}
-\\[-5pt]
-M61             & Analytic & 2     & $\{\Ronerhoprime, \dots, \Phiex, \kex\}$          & Fast exchange, on-resonance, $\Rone = \Rtwo$ & \citet{Meiboom61} \\
-DPL94           & Analytic & 2     & $\{\Ronerhoprime, \dots, \Phiex, \kex\}$          & Fast exchange                     & \citet{Davis94} \\
-M61 skew        & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & $\pA \gg \pB$, on-resonance       & \citet{Meiboom61} \\
-TP02            & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & Not fast exchange                 & \citet{TrottPalmer02} \\
-TP04            & Analytic & N     & $\{\Ronerhoprime, \dots, \pone, \dots, \pN, \aveomega, \konetwo, \dots\, \koneN\}$    & One site dominant                 & \citet{TrottPalmer04} \\
-MP05            & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & $\pA > \pB$                       & \citet{MiloushevPalmer05} \\
-NS R1rho 2-site & Numeric  & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$        & $\pA > \pB$                       & - \\
-
-\\[-5pt]
 % MQ CPMG-type models.
 MQ CPMG-type \\
 \cline{1-1}
 \\[-5pt]
-MQ CR72         & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$      & $\pA > \pB$                       & \citet{Korzhnev04a} \\
+MQ CR72                  & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$        & $\pA > \pB$                       & \citet{Korzhnev04a} \\
 
 \\[-5pt]
 % SQ, ZQ, DQ and MQ CPMG-type models.
-SQ, ZQ, DQ and MQ CPMG-type \\
+MMQ CPMG-type \\
 \cline{1-1}
 \\[-5pt]
-MMQ 2-site      & Numeric  & 2   & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$      & $\pA > \pB$                       & \citet{Korzhnev05} \\
+MMQ 2-site               & Numeric  & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$        & $\pA > \pB$                       & \citet{Korzhnev05} \\
+MMQ 3-site (linear)      & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwAC,$       & $\pA > \pB$ and $\pA > \pC$       & \citet{Korzhnev05} \\
+                         &          &       & $\dwHAB, \dwHAC, \kexAB, \kexAC\}$ \\
+MMQ 3-site (branched)    & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwAC$        & $\pA > \pB$ and $\pA > \pC$       & \citet{Korzhnev05} \\
+                         &          &       & $, \dwHAB, \dwHAC, \dwHBC, \kexAB, \kexAC, \kexBC\}$ \\
 
-\bottomrule
+% R1rho-type models.
+\clearpage
+$\Ronerho$-type \\
+\cline{1-1}
+\\[-5pt]
+M61                      & Analytic & 2     & $\{\Ronerhoprime, \dots, \Phiex, \kex\}$            & Fast exchange, on-resonance,      & \citet{Meiboom61} \\
+                         &          &       &                                                     & $\Rone = \Rtwo$ \\
+DPL94                    & Analytic & 2     & $\{\Ronerhoprime, \dots, \Phiex, \kex\}$            & Fast exchange                     & \citet{Davis94} \\
+M61 skew                 & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$          & $\pA \gg \pB$, on-resonance       & \citet{Meiboom61} \\
+TP02                     & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$          & Not fast exchange                 & \citet{TrottPalmer02} \\
+TP04                     & Analytic & N     & $\{\Ronerhoprime, \dots, \pone, \dots, \pN, \aveom  ega, \konetwo, \dots\, \koneN\}$    & One site dominant        & \citet{TrottPalmer04} \\
+MP05                     & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$          & $\pA > \pB$                       & \citet{MiloushevPalmer05} \\
+NS R1rho 2-site          & Numeric  & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$          & $\pA > \pB$                       & - \\
+NS R1rho 3-site (linear) & Numeric  & 3     & $\{\Ronerhoprime, \dots, \pA, \pB, \dwAB, \dwAC,$   & $\pA > \pB$ and $\pA > \pC$       & - \\
+                         &          &       & $\dwHAB, \dwHAC, \kexAB, \kexAC\}$ \\
+NS R1rho 3-site (branched) & Numeric & 3    & $\{\Ronerhoprime, \dots, \pA, \pB, \dwAB, \dwAC$    & $\pA > \pB$ and $\pA > \pC$       & - \\
+                         &          &       & $, \dwHAB, \dwHAC, \dwHBC, \kexAB, \kexAC, \kexBC\}$ \\
 
-% Label.
-\label{table: dispersion models}
-
-\end{tabular}
+\end{longtable}
 \end{small}
 \end{center}
-\end{sidewaystable}
+\end{landscape}
